# Bowties

./: .gitignore  LICENSE  README.md  airprox_bowtie.py  bowties.py  logictest.py  setup.cfg  windows_environment.yml
bowties/: __init__.py  bowties.py
examples/: airprox.ipynb  airprox_bowtie.py
