[metadata]
name = bowties
version = 0.1.4
author = Jonathan Pelham
author_email = jonititan@gmail.com
url = https://github.com/jonititan/bowties
description = A python module for modelling bowties in PyMC
long_description = file: README.md
long_description_content_type = text/markdown
keywords = example, setuptools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
requires-python = ">=3.7"
install_requires =
    networkx
dependency_links = git+https://github.com/pymc-devs/pymc